syntax = "proto3";

package api;

service Wallet {
    rpc GetWallet (GetWalletRequest) returns (GetWalletAck) {}
    rpc SetWallet (SetWalletRequest) returns (SetWalletAck) {}
}

message GetWalletRequest {
    bytes EncHashPerson = 1;
}

message GetWalletAck {
    WalletDetails Wd = 1;
}

message SetWalletRequest {
    bytes EncryptedBioData = 1;
    SignatureData SignatureBioData = 2;
    bytes EncryptedWalletData = 3;
    SignatureData SignatureWalletData = 4;
}

message SetWalletAck {
    bytes HashUpdatedWallet = 1;
}

message WalletDetails {
    bytes EncWallet = 1;
    bytes EncAeskey = 2;
    bytes EncWalletaddr =3;
}

message SignatureData {
    bytes SigBiod = 1;
    bytes SigPerson = 2;
}
